fix(docs): navbar sidebar height on mobile

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -265,6 +265,7 @@ article .clean-btn {
 }
 
 .navbar-sidebar {
+	height: 100vh;
 	background-color: var(--robo-background-color);
 	border-bottom: 1px solid var(--robo-border-color);
 }
